removed friends nav and footer, fixed alignment for login and register

--- a/src/app/routes/login/login.component.less
+++ b/src/app/routes/login/login.component.less
@@ -1,3 +1,15 @@
+.example-form {
+	text-align: center;
+	margin: auto;
+    min-width: 150px;
+    max-width: 500px;
+    width: 100%;
+  }
+  .example-full-width {
+	width: 100%;
+  }
+
+
 /*:host {
 	flex-grow: 1;
 	display: flex;
