--- a/src/app/routes/register/register.component.less
+++ b/src/app/routes/register/register.component.less
@@ -1,8 +1,13 @@
-  .example-full-width {
+  .example-form {
+    margin: auto;
     min-width: 150px;
     max-width: 500px;
     width: 100%;
   }
+
+  .example-full-width {
+    width: 100%;
+    }
 
 
 
